<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Brands</string>
    <string name="action_settings">Configuracion</string>
    <string name="hello_world">Freddy Feo</string>
    <string name="btnNuevoInventario">Nuevo Inventario</string>
    <string name="btnGenerarExcel">Generar Excel</string>
    <string name="btnEnviarDatos">Enviar Datos a Srv x WS</string>
    <string name="btnActualizarTablas">Actualizar Tablas Maestras</string>
    <string name="btnMenuPrincipal">Menu Principal</string>
    <string name="title_activity_nuevo_inventario">NuevoInventario</string>
    <string name="lblAlmacen">Almacén</string>
    <string name="lblUbicacion">Ubicación</string>
    <string name="lblProducto">Producto</string>
    <string name="lblCantidad">Cantidad</string>
    <string name="btnAgregarCantidad">Agregar</string>
    <string name="btnReemplazar">Reemplazar</string>
    <string name="lblUltimoRegistro">Ultimo registro</string>
    <string name="lblTotal">total</string>
    <string name="lblTotalProductos">Total de productos</string>
    <string name="lblCantidadProductos">Cantidad de productos</string>
    <string name="btnConsultaDetallada">Consulta detallada</string>
    <string name="btnCerrarInventario">Cerrar Inventario</string>
    <string name="cboAlmacenConsulta">Almacen abel</string>
    <string name="title_activity_actualizar_tablas_maestras">ActualizarTablasMaestras</string>
    <string name="btnActualizarProducto">Actualizar Producto</string>
    <string name="title_activity_consulta_detallada">ConsultaDetallada</string>
    <string name="title_activity_configurar_web_service">ConfigurarWebService</string>
    <string name="lblUrl">URL</string>
    <string name="btnGrabarUrl">Grabar URL</string>
    <string name="title_activity_inventario_nuevo">InventarioNuevo</string>
    <string name="lblBuscar">Buscar</string>
    <string name="title_activity_main">MainActivity</string>

</resources>