<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Inicio" >

    <Button
        android:id="@+id/btnNuevoInventario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzar"
        android:text="@string/btnNuevoInventario" />

    <Button
        android:id="@+id/btnGenerarExcel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGenerarExcel" />

    <Button
        android:id="@+id/btnEnviarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviarDatos" />

    <Button
        android:id="@+id/btnActualizarTablas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnActualizarTablas" />

    <Button
        android:id="@+id/btnMenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMenuPrincipal" />

</LinearLayout>