<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevoInventario" >

    <TextView
        android:id="@+id/lblAlmacen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cboAlmacen"
        android:layout_alignParentTop="true"
        android:text="@string/lblAlmacen"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/tamanoLetra" />

    <CheckBox
        android:id="@+id/chkUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblUbicacion"
        android:layout_below="@+id/lblUbicacion" />

    <Spinner
        android:id="@+id/cboUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chkUbicacion"
        android:layout_toRightOf="@+id/chkUbicacion" />

    <TextView
        android:id="@+id/lblProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkUbicacion"
        android:layout_below="@+id/cboUbicacion"
        android:text="@string/lblProducto"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/tamanoLetra" />

    <Spinner
        android:id="@+id/cboProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblProducto"
        android:layout_below="@+id/lblProducto" />

    <TextView
        android:id="@+id/lblCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cboProducto"
        android:layout_below="@+id/cboProducto"
        android:text="@string/lblCantidad"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/tamanoLetra" />

    <CheckBox
        android:id="@+id/chkCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblCantidad" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cboUbicacion"
        android:layout_alignTop="@+id/chkCantidad"
        android:ems="10"
        android:inputType="none"
        android:textSize="@dimen/tamanoLetra" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cboAlmacen"
        android:layout_below="@+id/cboAlmacen"
        android:text="@string/lblUbicacion"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/tamanoLetra" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/btnAgregarCantidad"
        android:layout_alignBottom="@+id/btnAgregarCantidad"
        android:layout_alignParentRight="true"
        android:text="@string/btnReemplazar"
        android:textSize="@dimen/tamanoLetra" />

    <Button
        android:id="@+id/btnCerrarInventario"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/btnConsultaDetallada"
        android:layout_toRightOf="@+id/btnConsultaDetallada"
        android:text="@string/btnCerrarInventario"
        android:textSize="@dimen/tamanoLetra" />

    <Spinner
        android:id="@+id/cboAlmacen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/lblAlmacen2"
        android:entries="@array/demo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtCantidadProductos"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/lblCantidadProductos"
        android:textSize="@dimen/tamanoLetra" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnConsultaDetallada"
        android:layout_below="@+id/btnConsultaDetallada"
        android:layout_marginTop="14dp"
        android:text="@string/lblTotalProductos"
        android:textSize="@dimen/tamanoLetra" />

    <EditText
        android:id="@+id/txtCantidadProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCerrarInventario"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="none"
        android:textSize="@dimen/tamanoLetra" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/chkCantidad"
        android:text="@string/lblUltimoRegistro"
        android:textSize="@dimen/tamanoLetra" />

    <Button
        android:id="@+id/btnAgregarCantidad"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/lblCantidad"
        android:layout_toLeftOf="@+id/button2"
        android:onClick="agregar"
        android:text="@string/btnAgregarCantidad"
        android:textSize="@dimen/tamanoLetra" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAgregarCantidad"
        android:layout_below="@+id/txtCantidad"
        android:layout_marginTop="23dp"
        android:text="@string/lblTotal"
        android:textSize="@dimen/tamanoLetra" />

    <EditText
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/txtCantidad"
        android:ems="10"
        android:inputType="none"
        android:textSize="@dimen/tamanoLetra" />

    <EditText
        android:id="@+id/txtUltimoRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/textView1"
        android:ems="10"
        android:inputType="none"
        android:textSize="@dimen/tamanoLetra" />

    <EditText
        android:id="@+id/txtTotalProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtCantidadProductos"
        android:layout_alignLeft="@+id/btnCerrarInventario"
        android:layout_alignRight="@+id/txtCantidadProductos"
        android:ems="10"
        android:inputType="none"
        android:textSize="@dimen/tamanoLetra" />

    <Button
        android:id="@+id/btnConsultaDetallada"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/txtUltimoRegistro"
        android:layout_below="@+id/txtUltimoRegistro"
        android:layout_marginTop="14dp"
        android:text="@string/btnConsultaDetallada"
        android:textSize="@dimen/tamanoLetra" />

</RelativeLayout>