<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActualizarTablasMaestras" >

    <TextView
        android:id="@+id/lblAlmacen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/lblAlmacen" />

    <Spinner
        android:id="@+id/cboAlmacenActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAlmacen"
        android:layout_below="@+id/lblAlmacen" />

    <TextView
        android:id="@+id/lblUbicacionActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cboAlmacenActualizar"
        android:layout_below="@+id/cboAlmacenActualizar"
        android:text="@string/lblUbicacion" />

    <Spinner
        android:id="@+id/cboUbicacionActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblUbicacionActualizar"
        android:layout_below="@+id/lblUbicacionActualizar" />

    <Button
        android:id="@+id/btnActualizarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cboUbicacionActualizar"
        android:layout_below="@+id/cboUbicacionActualizar"
        android:layout_marginTop="24dp"
        android:text="@string/btnActualizarProducto" />

</RelativeLayout>